...
        }
    }

    fun generateDemoData() {
        viewModelScope.launch(Dispatchers.IO) {
            // Pemisahan daftar kategori yang spesifik
            val listKategoriPemasukan = listOf("Gaji", "Hadiah", "Uang Saku")
            val listKategoriPengeluaran = listOf("Konsumsi", "Transportasi", "Darurat", "Hiburan")

            // List untuk menyimpan NAMA alokasi, bukan UUID
            val listNamaAlokasi = mutableListOf<String>()

            // 1. Buat 100 Alokasi (50 Kantong, 50 Tabungan)
...
