...
import uns.sakku.feature.transaction.data.TransactionRepository
import uns.sakku.feature.transaction.data.TransactionItem

// --- DATA CLASS UNTUK STATE ---
data class ReportUiState(
    val selectedFilter: String = "1 Bulan",
    val filters: List<String> = listOf("1 Minggu", "1 Bulan", "3 Bulan", "6 Bulan", "1 Tahun"),
    val incomeChartData: List<BarData> = emptyList(),
    val expenseChartData: List<BarData> = emptyList(),
    val totalIncome: Float = 0f,
    val totalExpense: Float = 0f,
    val expenseCategories: List<ExpenseCategory> = emptyList(),
    val incomeCategories: List<ExpenseCategory> = emptyList()
...
